chore: make the influx module compile against the recent changes